# backend/docs/swagger.json
@@ -28,7 +28,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Post"
+                            "$ref": "#/definitions/handlers.Question"
                         }
                     },
                     "301": {
@@ -50,182 +50,20 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Create question",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Questions"
-                ],
-                "summary": "Create a new question",
-                "parameters": [
-                    {
-                        "description": "Register book",
-                        "name": "question",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handlers.ResponseHTTP"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/handlers.Data"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/questions/{question_id}": {
-            "get": {
-                "description": "Get question by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Questions"
-                ],
-                "summary": "Get question by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Question ID",
-                        "name": "question_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handlers.ResponseHTTP"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/handlers.Data"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "503": {
-                        "description": "Service Unavailable",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Remove question by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Questions"
-                ],
-                "summary": "Remove question by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Question ID",
-                        "name": "question_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    },
-                    "503": {
-                        "description": "Service Unavailable",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    }
-                }
             }
         }
     },
     "definitions": {
-        "handlers.Data": {
+        "handlers.Question": {
             "type": "object",
             "properties": {
-                "firstname": {
-                    "type": "string"
-                },
-                "lastname": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.Post": {
-            "type": "object",
-            "properties": {
-                "VoteCount": {
-                    "type": "integer"
-                },
                 "answerCount": {
                     "type": "integer"
                 },
                 "category": {
                     "type": "string"
                 },
-                "createAt": {
+                "createdAt": {
                     "type": "string"
                 },
                 "id": {
@@ -235,6 +73,9 @@
                     "type": "string"
                 },
                 "viewCount": {
+                    "type": "integer"
+                },
+                "voteCount": {
                     "type": "integer"
                 }
             }
